--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Theme.Calmspace" parent="android:Theme.Material.Light.NoActionBar" />
+
+    <style name="Theme.Calmspace.Splash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">#EECEF6</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/calmspace_logo</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
+        <item name="postSplashScreenTheme">@style/Theme.Calmspace</item>
+    </style>
 </resources>
